# MemoryBridge

./: .dockerignore  .gitignore  Dockerfile  LICENSE  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_STATUS.md  README.md  docker-compose.yml  install-skill.sh  pyproject.toml  run_tests.sh
.github/: copilot-instructions.md
docs/: cli.md  mongodb-setup.md  quickstart.md  skill-integration.md  skill-setup.md
docs/advanced/: memory-lifecycle.md  monitoring.md  vector-search.md
docs/integrations/: langchain.md
examples/: storage_demo.py
skills/memorybridge/: README.md  SKILL.md  tools.py
src/memorybridge/: __init__.py  monitoring.py  optimization.py  skill_tools.py
src/memorybridge/cli/: __init__.py  graph_cmds.py  main.py
src/memorybridge/cognitive/: __init__.py  graph_extractor.py  manager.py  refiner.py
src/memorybridge/core/: __init__.py  memory.py  service.py
src/memorybridge/graph/: __init__.py  networkx_graph.py
src/memorybridge/integrations/: __init__.py  autogen_memory.py  claude_code.py  crewai_memory.py  haystack_docstore.py  langchain_memory.py  llamaindex_memory.py
src/memorybridge/storage/: __init__.py  factory.py  mongodb.py  oss_backup.py  sqlite.py  tiered_storage.py  vector_store.py
tests/: conftest.py  test_autogen_integration.py  test_cognitive.py  test_factory.py  test_graph.py  test_haystack_integration.py  test_integrations.py  test_langchain_integration.py  test_llamaindex_integration.py  test_memory.py  test_mongodb.py  test_monitoring.py  test_skill_tools.py  test_sqlite.py  test_tiered_storage.py
tests/benchmarks/: README.md  __init__.py  run_benchmarks.py  test_storage_benchmark.py
