[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorybridge"
version = "0.3.0"
description = "跨 Agent 记忆共享平台 - Memory as a Service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "shmily", email = "shmily@example.com" }
]
keywords = [
    "memory",
    "agent",
    "ai",
    "cli",
    "knowledge-graph"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "pyvis>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "black>=23.0.0",
]
mongodb = [
    "pymongo>=4.6.0",
]
oss = [
    "oss2>=2.18.0",
]
all = [
    "memorybridge[mongodb,oss]",
]

[project.scripts]
memorybridge = "memorybridge.cli.main:app"

[project.urls]
Documentation = "https://github.com/shmily/memorybridge#readme"
Issues = "https://github.com/shmily/memorybridge/issues"
Source = "https://github.com/shmily/memorybridge"

[tool.hatch.build.targets.wheel]
packages = ["src/memorybridge"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --cov=src/memorybridge --cov-report=term-missing"
